<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal" >

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_alignParentTop="true"
        android:background="@drawable/header_bg"
        android:gravity="center_vertical"
        android:padding="5dp" >

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="-5dp"
            android:contentDescription="@string/image_desc"
            android:onClick="BackClicked"
            android:src="@drawable/navigation_previous_item" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="5dp"
            android:contentDescription="@string/image_desc"
            android:onClick="searchPressed"
            android:src="@drawable/ic_action_search" />

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/image_horizontal"
            android:layout_centerVertical="true"
            android:layout_marginLeft="-20dp"
            android:onClick="BackClicked"
            android:layout_toRightOf="@+id/imageView2"
            android:src="@drawable/ic_launcher" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_marginLeft="-8dp"
            android:layout_toRightOf="@+id/imageView1"
            android:text="@string/resto"
            android:textColor="#fff"
            android:textSize="20sp" 
            android:onClick="BackClicked"
            android:gravity="center"/>

    </RelativeLayout>
    
	    <LinearLayout
	        android:id="@+id/body"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:orientation="vertical" 
	        android:layout_below="@id/header" >

	        <RelativeLayout
	            android:layout_width="fill_parent"
	            android:layout_height="100dp"
	            android:background="#8264543D"
	            android:gravity="center_vertical" >

	            <ImageView
	                android:id="@+id/cover_image"
	                android:layout_width="match_parent"
	                android:layout_height="100dp"
	                android:layout_alignParentTop="true"
	                android:background="@drawable/bg_cover"
	                android:contentDescription="@string/image_desc"
	                android:scaleType="centerCrop" />

	            <TextView
	                android:id="@+id/restorant_name"
	                android:layout_width="match_parent"
	                android:layout_height="wrap_content"
	                android:layout_alignParentLeft="true"
	                android:layout_marginLeft="15dp"
	                android:layout_marginRight="100dp"
	                android:layout_marginTop="12dp"
	                android:text="@string/restaurant_name"
	                android:textColor="#fff"
	                android:textSize="18sp"
	                android:textStyle="bold" />

	            <LinearLayout
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_below="@+id/restorant_name"
	                android:layout_marginLeft="15dp" >

	                <RatingBar
	                    android:id="@+id/ratingBar1"
	                    style="@style/foodRatingBar"
	                    android:layout_width="wrap_content"
	                    android:layout_height="wrap_content"
	                    android:numStars="5" />
	            </LinearLayout>

	            <!-- rounded image -->

	            <LinearLayout
	                android:layout_width="83dp"
	                android:layout_height="83dp"
	                android:layout_alignParentRight="true"
	                android:layout_marginRight="15dp"
	                android:layout_marginTop="10dp"
	                android:background="@drawable/rounded_image" >

	                <ImageView
	                    android:id="@+id/image"
	                    android:layout_width="80dp"
	                    android:layout_height="80dp"
	                    android:layout_gravity="center"
	                    android:layout_margin="1dp"
	                    android:background="@drawable/logo3"
	                    android:contentDescription="@string/image_desc"
	                    android:scaleType="fitXY" />
	            </LinearLayout>
	        </RelativeLayout>
	        
	        <android.support.v4.view.ViewPager
		        android:id="@+id/pager"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content">
		 
		        <android.support.v4.view.PagerTitleStrip
		            android:id="@+id/pager_title_strip"
		            android:layout_width="match_parent"
		            android:layout_height="40dp"
		            android:layout_gravity="top"
		            android:background="@drawable/tab_bg"
		            android:textColor="#333"
		            android:paddingBottom="9dp" />
		 
		    </android.support.v4.view.ViewPager>
		    
	    </LinearLayout>
	
</RelativeLayout>
